# floatingpointmgr

./: CMakeLists.txt  README.md  main.cpp
benchmarks/: CMakeLists.txt  benchmark_FloatingPointManager.cpp
include/: FloatingPointManager.h
src/: FloatingPointManager.cpp
tests/: CMakeLists.txt  test_FloatingPointManager.cpp
